--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "pipenv run flask run",
+    "start-api": "pipenv run uvicorn  --app-dir api/  app:app --port 5000",
+    "start-dev-api": "pipenv run uvicorn  --app-dir api/  app:app --reload --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
