--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "pipenv run uvicorn  --app-dir api/  app:app --port 5001",
-    "start-dev-api": "pipenv run uvicorn  --app-dir api/  app:app --reload --port 5001",
+    "start-api": "pipenv run uvicorn  --app-dir api/  app:app --port 5000",
+    "start-dev-api": "pipenv run uvicorn  --app-dir api/  app:app --reload --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
